Update production url

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_PRODUCTION_URL=
+VUE_APP_PRODUCTION_URL=https://vilvalas.github.io/gamedev-portfolio/
 VUE_APP_TITLE=Vilva
 VUE_APP_DESCRIPTION=My portfolio website
 VUE_APP_OGDESCRIPTION=
